--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Guess Who — Multiplayer</title>
+
+  <meta name="google-site-verification" content="aTarT8wvivsJ3YFlo5ylVsqPB1K2fxAJIIVShwdWLmQ" />
+  
+  <title>Whos That</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
