added meta data

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   <meta name="google-site-verification" content="aTarT8wvivsJ3YFlo5ylVsqPB1K2fxAJIIVShwdWLmQ" />
+
+   <title>Who's That - Multiplayer Guessing Game</title>
+  <meta name="description" content="Play Who's That — a fun online multiplayer guessing game where you challenge your friends to identify characters, faces, or friends! Free and fast to play." />
+  <meta name="keywords" content="whosthat, who’s that game, guess who online, multiplayer guessing game, play with friends, web games, fun browser games" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- 📱 Open Graph (for social sharing) -->
+  <meta property="og:title" content="Who's That - Multiplayer Guessing Game" />
+  <meta property="og:description" content="Invite friends and play the exciting guessing game — Who's That! Can you guess them all?" />
+  <meta property="og:url" content="https://whosthat.onrender.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://whosthat.onrender.com/thumbnail.png" />
+
+  <!-- 🐦 Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Who's That - Multiplayer Guessing Game" />
+  <meta name="twitter:description" content="Play Who's That with friends — the fast, fun, and hilarious online guessing game!" />
+  <meta name="twitter:image" content="https://whosthat.onrender.com/thumbnail.png" />
+</head>
   
   <title>Whos That</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
