added google tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
 
   <meta name="google-site-verification" content="aTarT8wvivsJ3YFlo5ylVsqPB1K2fxAJIIVShwdWLmQ" />
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G8KDPY1N6W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G8KDPY1N6W');
+</script>
+
    <title>Who's That - Multiplayer Guessing Game</title>
   <meta name="description" content="Play Who's That — a fun online multiplayer guessing game where you challenge your friends to identify characters, faces, or friends! Free and fast to play." />
   <meta name="keywords" content="whosthat, who’s that game, guess who online, multiplayer guessing game, play with friends, web games, fun browser games" />
