--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
 
   gtag('config', 'G-G8KDPY1N6W');
 </script>
-
+   <link rel="icon" type="image/png" href="/image.png">
    <title>Who's That - Multiplayer Guessing Game</title>
+   
+
   <meta name="description" content="Play Who's That — a fun online multiplayer guessing game where you challenge your friends to identify characters, faces, or friends! Free and fast to play." />
   <meta name="keywords" content="whosthat, who’s that game, guess who online, multiplayer guessing game, play with friends, web games, fun browser games" />
   <meta name="robots" content="index, follow" />
@@ -64,7 +66,7 @@
     <section id="screen-home" class="screen active">
       <div class="home-wrap">
         <h1 class="title">🎉 Guess Who?</h1>
-        <p class="subtitle">Cartoon-style • Real-time multiplayer • Super responsive</p>
+        <p class="subtitle">• Real-time multiplayer Guess who game • </p>
 
         <div class="home-panels">
           <div class="card">
